--- a/templates/categoryedit.html
+++ b/templates/categoryedit.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="{{ url_for('editCategory', category_id=category.id) }}" method="post">
+<form class="navbar-form" action="{{ url_for('editCategory', category_id=category.id) }}" method="post">
 	Edit Category Information: 
 	<br>
-	<input type="text" name="category" placeholder="{{category.category}}">
+	<input class="form-control" type="text" name="category" placeholder="{{category.category}}">
 	<br>
-	<input type="submit">
+	<input class="btn btn-default" type="submit">
 	<a href="{{ url_for('displayCategory', category_id=category.id) }}">Cancel</a>
 </form>
 {% endblock %}
