--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,29 @@
-.title {
+body {
 	text-align: center;
-	margin: 0 auto;
 }
 
-.title a {
-	color: black;
-	text-decoration: none;
+h4 {
+	padding-top: 10px;
+}
+
+#category {
 	font-size: 30px;
+}
+
+#login-display {
+	margin-right: 10px;
+	font-size: 20px;
+}
+
+#login {
+	padding-top: 10px;
+}
+
+#title {
+	font-size: 50px;
+}
+
+#flash-list li {
+	list-style-type: none;
+	color: rgb(241, 255, 31);
 }
