--- a/templates/base.html
+++ b/templates/base.html
@@ -1,41 +1,64 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 	<title>Browse various musical instruments</title>
 </head>
 <body>
-	<div class="title">
-		<a href="/">Musical Instrument Catalog</a> <br>
-		{% if username %}
-			<a href="#">Welcome, {{username}}</a>
-		{% else %}
-			<a href="{{ url_for('login') }}">login</a>
-		{% endif %}
+	<div class="container-responsive">
+		<div style="padding-bottom: 5px;" class="row">
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-8" id="title">
+				<a class="label label-default" href="/">Musical Instrument Catalog</a>
+			</div>
+			<div class="col-md-2" id="login">
+				{% if username %}
+					{{username}}
+					<a class="btn btn-default" href="{{ url_for('gdisconnect') }}">Logout</a>
+				{% else %}
+					<a id="login-display" class="btn btn-default" href="{{ url_for('login') }}">Login</a>
+				{% endif %}
+			</div>
+		</div>
 
-	</div>
-	<div>
-		{% with messages = get_flashed_messages() %}
-			{% if messages %}
-			<ul>
-				{% for message in messages %}
-				<li>{{message}}</li>
-				{% endfor %}
-			</ul>
-			{% endif %}
-		{% endwith %}
-	</div>
-	<div>
-		<a href="{{ url_for('addCategory') }}">Click Here to Add a Category</a>
-	</div>
-	<div class="title">
-		{% for category in categories %}
-			<a href="{{ url_for('displayCategory', category_id=category.id) }}">{{ category.category }}</a>
-		{% endfor %}
-	</div>
-	<div>
-		{% block content %}
-		{% endblock %}
+		<div class="row">
+			<div class="col-md-12">
+				{% with messages = get_flashed_messages() %}
+					{% if messages %}
+					<ul id="flash-list">
+						{% for message in messages %}
+						<li>{{message}}</li>
+						{% endfor %}
+					</ul>
+					{% endif %}
+				{% endwith %}
+			</div>
+		</div>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				Instrument Categories
+			</div>
+
+			<div style="padding-top: 5px;">
+				<a class="btn btn-primary" href="{{ url_for('addCategory') }}">Add a Category</a>
+			</div>
+
+			<div style="padding-top: 5px;">
+				<div>
+					{% for category in categories %}
+						<a class="btn btn-default" href="{{ url_for('displayCategory', category_id=category.id) }}">{{ category.category }}</a>
+					{% endfor %}
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			{% block content %}
+			{% endblock %}
+		</div>
 	</div>
 </body>
 </html>
