--- a/templates/instrumentadd.html
+++ b/templates/instrumentadd.html
@@ -1,16 +1,16 @@
 {% extends "category.html" %}
 {% block specific %}
-<form action="{{ url_for('addInstrument', category_id=category.id) }}" method='post'>
-	<div>
+<form class="navbar-form" action="{{ url_for('addInstrument', category_id=category.id) }}" method='post'>
+	<div class="form-group">
 		New Instrument: <br><br>
 		Name: <br>
-		<input type="text" name="name"> <br>
-		<textarea name="description" placeholder="description goes here"></textarea> <br>
+		<input class="form-control" type="text" name="name"> <br>
+		<textarea class="form-control" name="description" placeholder="description goes here"></textarea> <br>
 		Brand: <br>
-		<input type="text" name="brand"> <br>
+		<input class="form-control" type="text" name="brand"> <br>
 		Color: <br>
-		<input type="text" name="color"> <br>
-		<input type="submit">
+		<input class="form-control" type="text" name="color"> <br>
+		<input class="btn btn-default" type="submit">
 		<a href="{{ url_for('displayCategory', category_id=category.id) }}">Cancel</a>			
 	</div>
 </form>
