--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,12 @@
 	<script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
 	<title>Login with Google</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
 	<div id="signInButton">
+		<h1>Sign in with Google</h1>
         <span class="g-signin"
 			  	data-scope="openid email"
 				data-clientid=""
@@ -17,6 +20,12 @@
 				data-callback="signInCallback"
 				data-approvalprompt="force">
         </span>
+    </div>
+
+    <div>
+    	{% if error %}
+    		{{error}}
+    	{% endif %}
     </div>
 
     <div id="result"></div>
